--- a/BlockFingertap/settings.yml
+++ b/BlockFingertap/settings.yml
@@ -7,7 +7,7 @@ monitor:
 
 window:
   size: [1920, 1080]
-  screen: 0
+  screen: 1
   pos: [0, 0]
   color: [0, 0, 0]
   fullscr: True
@@ -29,7 +29,7 @@ stimuli:
   cue_color: "#FFFFFF" # white
 
 design:
-  n_repeats: 7 # nr of repeats for each event. If condition = RBL, a total of 3*n_repeat trials are used. Similarly, if condition = RL, a total of 2*n_repeats is used
+  n_repeats: 6 # nr of repeats for each event. If condition = RBL, a total of 3*n_repeat trials are used. Similarly, if condition = RL, a total of 2*n_repeats is used
   randomize: False # randomize events
   start_duration: 30 # baseline beginning of trial
   end_duration: 30 # baseline end of trial (not too important if you have set `intended_duration`)
@@ -37,11 +37,12 @@ design:
   static_isi: None # add integer for fixed intertrial interval
   stim_duration: 3 # stimulus duration
   cue_time: 0.5
-  mean_iti_duration: 10 # mean intertrial interval | not used if `static_isi` is set
-  minimal_iti_duration: 6 # minimum intertrial interval | not used if `static_isi` is set
-  maximal_iti_duration: 18.0 # maximum intertrial interval | not used if `static_isi` is set
+  mean_iti_duration: 12 # mean intertrial interval | not used if `static_isi` is set
+  minimal_iti_duration: 8 # minimum intertrial interval | not used if `static_isi` is set
+  maximal_iti_duration: 22.0 # maximum intertrial interval | not used if `static_isi` is set
   total_iti_duration_leeway: 2.0  
-  iti_file: None # "itis_desc-21_events.txt"
+  iti_file: "itis_desc-18_events.txt"
+  order_file: "itis_desc-18_order.txt"
   
 various:
   piechart_width: 1
